# realtime-trading-bot

./: Cargo.toml  Dockerfile  README.md  kustomize.yml  no_build.rs_  refinery.toml
.github/workflows/: actions.yml
migrations/: V1__trade_hypertable.sql  V2__orderbook_snapshot_hypertable.sql
src/: ab_buffer.rs  binance.rs  bybit.rs  config.rs  entities.rs  main.rs  observability.rs  record.rs  recording.rs
