[package]
name = "realtime-trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance_spot_connector_rust = "1.1.0"
clap = { version = "4.5.0", features = ["derive", "env"] }
tungstenite = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
rust_decimal = { version = "1.34.3", features = ["serde-with-str"] }
chrono = { version = "0.4.34", features = ["serde"] }
parquet = "50.0.0"
lazy_static = "1.4.0"
parquet_derive = "50.0.0"
ctrlc = "3.4.2"
humantime = "2.1.0"
