[package]
name = "realtime-trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
rust_decimal = { version = "1.34.3", features = ["serde-with-str"] }
chrono = { version = "0.4.34", features = ["serde"] }
parquet = "50.0.0"
lazy_static = "1.4.0"
parquet_derive = "50.0.0"
humantime = "2.1.0"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.25.0", features = ["tokio-openssl"] }
futures = "0.3.30"
tokio-openssl = "0.6.4"
