[package]
name = "realtime-trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
rust_decimal = { version = "1.34.3", features = ["serde-with-str", "db-postgres"] }
chrono = { version = "0.4.34", features = ["serde"] }
lazy_static = "1.4.0"
humantime = "2.1.0"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.25.0", features = ["tokio-openssl"] }
futures = "0.3.30"
tokio-openssl = "0.6.4"
tracing-loki = "0.2.4"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
rand = "0.8.5"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
refinery = { version = "0.8.12", features = ["tokio-postgres"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
rs-consul = "0.5.0"
serde_yaml = "0.9.32"
tokio-util = "0.7.10"
